Fix navbar spacing

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,7 +5,6 @@
   @include wrapper();
   padding-top: $spacing-6;
   padding-bottom: $spacing-6;
-  margin-bottom: $spacing-6;
   border-bottom: 1px solid var(--prim-300);
   &__title {
     color: var(--prim-300);
